Changes:

2.11.2
----------------
* go/cpp: fix regex to handle parsing complex extensions with single character component ("file.1.a.ext")
* go: remove print statement from FindSequenceOnDiskPad

2.11.1
----------------
* cpp - Fix FrameSet::inverted() memory leak
* cpp - Fix framesToFrameRange() bad formatting with 2 frames

2.11.0
----------------
* go/cpp - Implement UDIM style syntax for padding
* go/cpp - Fix parsing error by relaxing acceptable characters in extension component (align with pyfileseq)

2.10.0
----------------
* go - Prevent single file path from being appended more than one FindSequences*
* go - Fix FindSequencesInList formatting bad sequence string for single-file sequence with ambiguous range-ish pattern
* go/cpp - Refactor FindSequences* to use optional frame range pattern when detecting single frame paths

2.9.0
----------------
* Split the FindSequencesOnDisk logic to expose new FindSequencesInList function

2.8.0
----------------
* go/cpp - Add support for printf (%04d) and houdini ($F04) pad syntax formats
* cpp - Prevent segfault when calling getters on default constructed FileSequence; return default values
* cpp - Define FileSequence::operator bool() to return FileSequence::isValid()
* cmd/seqls - Update to a faster parallel filesystem walk library
* go - Update to Go 1.15.x

2.7.1
----------------
* cmd/seqls - Switch to a faster parallel filesystem walking library

2.7.0
----------------
* Removed vendored Go dependencies
* Fix handling of Windows path separator in FileSequence.SetDirname and findSequencesOnDisk
* cmd/seqls - Properly build against gofileseq/v2
* cmd/seqls - Add --hash1 flag to use pad hash width=1 instead of 4
* cmd/seqls - Add --strict flag to apply strict length of search pattern pad character to matches
* cpp: Add a cmake build setup

2.6.3
----------------
* Convert from Glide to Go module

2.6.2
----------------
* Add Go module support as v2
* exp/cpp: cleanups of experimental go/cpp binding

2.6.1