@@ -912,16 +912,17 @@ func TestFindSequenceOnDisk(t *testing.T) {
 			name:   "pad hash 1",
 			mapper: PadStyleHash1,
 			tests: map[string]string{
-				"testdata/seqC.@@.tif":                "testdata/seqC.-5-2,4-10,20-21,27-30##.tif",
-				"testdata/seqC.0010.tif":              "",
-				"testdata/seqC.10.tif":                "testdata/seqC.-5-2,4-10,20-21,27-30##.tif",
-				"testdata/seqB.####.jpg":              "testdata/seqB.5-14,16-18,20####.jpg",
-				"testdata/seqB.16-18####.jpg":         "testdata/seqB.5-14,16-18,20####.jpg",
-				"testdata/seqA.####.exr":              "testdata/seqA.1,3-6,8-10####.exr",
-				"testdata/seqA.@@@@.exr":              "testdata/seqA.1,3-6,8-10####.exr",
-				"testdata/seqA.@.jpg":                 "",
-				"testdata/complex.@@@@.tar.gz":        "testdata/complex.5-7####.tar.gz",
-				"testdata/complex_frame_only/@.a.jpg": "testdata/complex_frame_only/1-3#.a.jpg",
+				"testdata/seqC.@@.tif":           "testdata/seqC.-5-2,4-10,20-21,27-30##.tif",
+				"testdata/seqC.0010.tif":         "",
+				"testdata/seqC.10.tif":           "testdata/seqC.-5-2,4-10,20-21,27-30##.tif",
+				"testdata/seqB.####.jpg":         "testdata/seqB.5-14,16-18,20####.jpg",
+				"testdata/seqB.16-18####.jpg":    "testdata/seqB.5-14,16-18,20####.jpg",
+				"testdata/seqA.####.exr":         "testdata/seqA.1,3-6,8-10####.exr",
+				"testdata/seqA.@@@@.exr":         "testdata/seqA.1,3-6,8-10####.exr",
+				"testdata/seqA.@.jpg":            "",
+				"testdata/complex.@@@@.tar.gz":   "testdata/complex.5-7####.tar.gz",
+				"testdata/complex_ext/@.a.jpg":   "testdata/complex_ext/1-3#.a.jpg",
+				"testdata/complex_ext/@@@.1.ext": "testdata/complex_ext/100-102###.1.ext",
 
 				"testdata/seqC.%02d.tif":     "testdata/seqC.-5-2,4-10,20-21,27-30##.tif",
 				"testdata/seqC.$F02.tif":     "testdata/seqC.-5-2,4-10,20-21,27-30##.tif",
@@ -940,16 +941,17 @@ func TestFindSequenceOnDisk(t *testing.T) {
 			name:   "pad hash 4",
 			mapper: PadStyleHash4,
 			tests: map[string]string{
-				"testdata/seqC.@@.tif":                "testdata/seqC.-5-2,4-10,20-21,27-30@@.tif",
-				"testdata/seqC.0010.tif":              "",
-				"testdata/seqC.10.tif":                "testdata/seqC.-5-2,4-10,20-21,27-30@@.tif",
-				"testdata/seqB.#.jpg":                 "testdata/seqB.5-14,16-18,20#.jpg",
-				"testdata/seqB.16-18#.jpg":            "testdata/seqB.5-14,16-18,20#.jpg",
-				"testdata/seqA.#.exr":                 "testdata/seqA.1,3-6,8-10#.exr",
-				"testdata/seqA.@.exr":                 "",
-				"testdata/seqA.@.jpg":                 "",
-				"testdata/complex.#.tar.gz":           "testdata/complex.5-7#.tar.gz",
-				"testdata/complex_frame_only/@.a.jpg": "testdata/complex_frame_only/1-3@.a.jpg",
+				"testdata/seqC.@@.tif":           "testdata/seqC.-5-2,4-10,20-21,27-30@@.tif",
+				"testdata/seqC.0010.tif":         "",
+				"testdata/seqC.10.tif":           "testdata/seqC.-5-2,4-10,20-21,27-30@@.tif",
+				"testdata/seqB.#.jpg":            "testdata/seqB.5-14,16-18,20#.jpg",
+				"testdata/seqB.16-18#.jpg":       "testdata/seqB.5-14,16-18,20#.jpg",
+				"testdata/seqA.#.exr":            "testdata/seqA.1,3-6,8-10#.exr",
+				"testdata/seqA.@.exr":            "",
+				"testdata/seqA.@.jpg":            "",
+				"testdata/complex.#.tar.gz":      "testdata/complex.5-7#.tar.gz",
+				"testdata/complex_ext/@.a.jpg":   "testdata/complex_ext/1-3@.a.jpg",
+				"testdata/complex_ext/@@@.1.ext": "testdata/complex_ext/100-102@@@.1.ext",
 
 				"testdata/seqC.%02d.tif":     "testdata/seqC.-5-2,4-10,20-21,27-30@@.tif",
 				"testdata/seqC.$F02.tif":     "testdata/seqC.-5-2,4-10,20-21,27-30@@.tif",
