@@ -3,6 +3,7 @@ Changes:
 2.11.2
 ----------------
 * go/cpp: fix regex to handle parsing complex extensions with single character component ("file.1.a.ext")
+* go/cpp: improve handling of ambiguous frame patterns in FindSequenceOnDisk ("100.1.ext")
 * go: remove print statement from FindSequenceOnDiskPad
 
 2.11.1
